--- a/css/reset.css
+++ b/css/reset.css
@@ -2,9 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
-    color: #333;
     text-decoration: none;
+}
+
+p, h1, a {
+    color: #333;
 }
