--- a/css/sobre.css
+++ b/css/sobre.css
@@ -38,7 +38,7 @@ header nav a {
     text-transform: uppercase;
     font-size: 1.2em;
 
-    transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.2s;
 }
 
 header nav a:hover {
@@ -48,7 +48,6 @@ header nav a:hover {
 /* MAIN */
 
 main {
-    max-width: 650px;
     margin: 0 50px;
     height: 50vh;
     display: flex;
@@ -85,6 +84,7 @@ main .info .info-sobre p a {
 /* MAIN SOBRE-MIM */
 
 main .sobre-mim p {
+    width: 70%;
     margin: 50px 0;
 }
 
