--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,59 +1,3 @@
-body {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-}
-
-/* HEADER */
-
-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    background-color: #b26241;
-    
-    height: 100vh;
-    padding: 50px;
-}
-
-header img {
-    width: 200px;
-    border: 5px solid #c87f64;
-    border-radius: 100px;
-}
-
-header nav {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-}
-
-header nav a {
-    color: #f19b7c;
-    margin: 15px 0;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1.2em;
-
-    transition: ease-in-out 0.2s;
-}
-
-header nav a:hover {
-    color: #f0f0f0;
-}
-
-/* MAIN */
-
-main {
-    margin: 0 50px;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-}
-
 /* MAIN INFO */
 
 main .info {
@@ -100,4 +44,5 @@ main .links-icons a i {
     background-color: #333;
     padding: 15px;
     border-radius: 150px;
+    transition: all 0.2s;
 }
