--- a/css/media-conhecimento.css
+++ b/css/media-conhecimento.css
@@ -9,7 +9,8 @@
     }
     
     main ol { 
+        font-size: 0.8em;
+        flex-wrap: nowrap;
         height: 100vh;
-        padding-bottom: 50px;
     }
 }
