--- a/css/objetivo.css
+++ b/css/objetivo.css
@@ -1,8 +1,17 @@
 main {
-    height: 92vh;
+    height: 97vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+main section {
+    margin-left: 30px;
+}
+
+
 h2 {
+    font-size: 1.2em;
     margin: 10px 0;
     color: #333;
 }
@@ -13,6 +22,7 @@ ul {
 }
 
 li {
+    font-size: 0.9em;
     padding: 10px 0;
     border-bottom: 1px solid #eee;
     color: #555;
